discussion/kv_engine/177062/177062_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46738: Turn FCManager::consumersMap into a folly::Sync set

Two changes here:
1. From mutex to folly::Synchronized, for easier thread safety
2. From map<Cookie, DcpConsumer*> to set<DcpConsumer*>

(2) is all what we need for modifying/accessing the structure as all
the related FCManager API takes DcpConsumer* in input.

Change-Id: Ie7d307de48dfd6685b5515f7321a714de1aae30c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-07-05 07:38:33.000000000
Message: 
Uploaded patch set 2: Patch Set 1 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-05 07:43:02.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47441/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47441/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8333/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8333/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20897/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20897/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21552/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21552/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20544/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20544/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28931/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28931/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19775/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19775/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8431/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8431/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18655/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:48:12: error: no template named "Synchronized" in namespace "folly" [clang-diagnostic-error]
    folly::Synchronized<std::set<DcpConsumer*>> consumers;
           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:48:30: error: no template named "set" in namespace "std"; did you mean "get"? [clang-diagnostic-error]
    folly::Synchronized<std::set<DcpConsumer*>> consumers;
                             ^~~
                             get
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/utility:223:5: note: "get" declared here
    get(std::pair<_Tp1, _Tp2>& __in) noexcept
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18655/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:48:12:
error: no template named "Synchronized" in namespace "folly" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18655/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39856/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:48:30:
error: no template named "set" in namespace "std"; did you mean "get"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39856/ )

CMake error: CMakeLists.txt:145 (MESSAGE) ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39856/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17808/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
